--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   --card-padding: 1.8rem;
   --padding-1: 1.2rem;
 
-  --box-shadow: 0 2rem 3rem var(var(--color-light));
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 * {
@@ -49,9 +49,10 @@ body {
   background-color: var(--color-background);
   user-select: none;
   overflow-x: hidden;
+  color: var(--color-dark);
 }
 
-.container{
+.container {
   display: grid;
   width: 96%;
   margin: 0 auto;
@@ -132,94 +133,252 @@ aside {
   height: 100vh;
 }
 
-aside .top{
-  background-color:white;
+aside .top {
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 1.4rem;
 }
 
-aside .logo{
+aside .logo {
   display: flex;
   gap: 0.8rem;
 }
 
-aside .logo img{
+aside .logo img {
   width: 2rem;
   height: 2rem;
 }
 
-aside .close{
+aside .close {
   display: none;
 }
 
 /**--------------------------sideBar-----------------------------*/
-aside .sidebar{
+aside .sidebar {
   /* background: white; */
   display: flex;
   flex-direction: column;
   height: 86vh;
   position: relative;
-  top:3rem;
+  top: 3rem;
 }
 
-aside h3{
-  font-weight:500;
+aside h3 {
+  font-weight: 500;
 }
 
-aside .sidebar a{
+aside .sidebar a {
   display: flex;
   color: var(--color-info-dark);
-  margin-left:2rem;
-  gap:1rem;
+  margin-left: 2rem;
+  gap: 1rem;
   align-items: center;
   position: relative;
   height: 3.7rem;
-  transition:all 300ms ease;
+  transition: all 300ms ease;
 }
 
-aside .sidebar a span{
+aside .sidebar a span {
   font-size: 1.6rem;
-  transition:all 300ms ease;
+  transition: all 300ms ease;
 }
 
-aside .sidebar a:last-child{
+aside .sidebar a:last-child {
   position: absolute;
-  bottom:2rem;
+  bottom: 2rem;
   width: 100%;
 }
 
-aside .sidebar a.active{
+aside .sidebar a.active {
   background-color: var(--color-light);
-  color:var(--color-primary);
-  margin-left:0;
+  color: var(--color-primary);
+  margin-left: 0;
 }
 
-aside .sidebar a.active::before{
+aside .sidebar a.active::before {
   content: "";
   width: 6px;
   height: 100%;
-  background-color:var(--color-primary);
+  background-color: var(--color-primary);
 }
 
-aside .sidebar a.active span{
-  color:var(--color-primary);
-  margin-left:cal(1rem - 6px);
+aside .sidebar a.active span {
+  color: var(--color-primary);
+  margin-left: cal(1rem - 6px);
 }
 
-aside .sidebar a:hover{
-  color:var(--color-primary);
+aside .sidebar a:hover {
+  color: var(--color-primary);
 }
 
-aside .sidebar a:hover span{
+aside .sidebar a:hover span {
   margin-left: 1rem;
 }
 
-aside .sidebar .message-count{
+aside .sidebar .message-count {
   background-color: var(--color-danger);
-  color:var(--color-white);
-  padding:2px 10px;
-  font-size:11px;
+  color: var(--color-white);
+  padding: 2px 10px;
+  font-size: 11px;
   border-radius: var(--border-radius-1);
+}
+
+/**===========================MAIN==========================*/
+main {
+  margin-top: 1.4rem;
+}
+
+main .date {
+  display: inline-block;
+  background-color: var(--color-light);
+  border-radius: var(--border-radius-1);
+  margin-top: 1rem;
+  padding: 0.5rem 1.6rem;
+}
+
+main .date input {
+  background-color: transparent;
+  color: var(--color-dark);
+}
+
+main .insight {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+}
+
+main .insight > div {
+  background-color: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  margin-top: 1rem;
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+}
+
+main .insight > div:hover {
+  box-shadow: none;
+}
+
+main .insight > div span {
+  background-color: var(--color-primary);
+  padding: 0.5rem;
+  border-radius: 50%;
+  color: var(--color-white);
+  font-size: 2rem;
+}
+
+main .insight > div.expanses span {
+  background-color: var(--color-danger);
+}
+
+main .insight > div.income span {
+  background-color: var(--color-success);
+}
+
+main .insight > div .middle{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+main .insight h3{
+  margin: 1rem 0 .6rem;
+  font-size: 1rem;
+}
+
+main .insight .progress{
+  position:relative;
+  width:92px;
+  height:92px;
+  border-radius: 50%;
+}
+
+main .insight svg{
+  width:7rem;
+  height:7rem;
+}
+
+main .insight svg circle{
+  fill:none;
+  stroke:var(--color-primary);
+  stroke-width:14;
+  stroke-linecap:round;
+  transform:translate(5px,5px);
+  /* stroke-dasharray:110;
+  stroke-dashoffset:92; */
+}
+
+main .insight .sales svg circle{
+  stroke-dashoffset: -30;
+  stroke-dasharray: 200;
+}
+
+main .insight .expanses svg circle{
+  stroke-dashoffset: 20;
+  stroke-dasharray: 80;
+}
+
+main .insight .income svg circle{
+  stroke-dashoffset: 35;
+  stroke-dasharray: 110;
+}
+
+main .insight .progress .number{
+  position: absolute;
+  top:0;
+  left:0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main .insight small{
+  margin-top: 1.6rem;
+  display: block;
+}
+
+/**===========================RECENT ORDERS===========================*/
+main .recent-order{
+  margin-top: 2rem;
+
+}
+
+main .recent-order h2{
+  margin-bottom: .8rem;
+}
+
+main .recent-order table{
+  background-color: var(--color-white);
+  width: 100%;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  text-align: center;
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+}
+
+main .recent-order table:hover{
+  box-shadow: none;
+}
+
+main table tbody td{
+  height: 2.8rem;
+  border-bottom: 1px solid var(--color-light);
+  color: var(--color-dark-variant);
+}
+
+main table tbody tr:last-child td{
+  border: none;
+}
+
+main .recent-order a{
+  text-align: center;
+  display: block;
+  margin: 1rem auto;
+  color: var(--color-primary);
 }
