--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ aside {
 }
 
 aside .top {
-  background-color: white;
+  /* background-color: white; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -278,58 +278,58 @@ main .insight > div.income span {
   background-color: var(--color-success);
 }
 
-main .insight > div .middle{
-  display:flex;
-  align-items:center;
-  justify-content:center;
+main .insight > div .middle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-main .insight h3{
-  margin: 1rem 0 .6rem;
+main .insight h3 {
+  margin: 1rem 0 0.6rem;
   font-size: 1rem;
 }
 
-main .insight .progress{
-  position:relative;
-  width:92px;
-  height:92px;
+main .insight .progress {
+  position: relative;
+  width: 94px;
+  height: 94px;
   border-radius: 50%;
 }
 
-main .insight svg{
-  width:7rem;
-  height:7rem;
+main .insight svg {
+  width: 7rem;
+  height: 7rem;
 }
 
-main .insight svg circle{
-  fill:none;
-  stroke:var(--color-primary);
-  stroke-width:14;
-  stroke-linecap:round;
-  transform:translate(5px,5px);
+main .insight svg circle {
+  fill: none;
+  stroke: var(--color-primary);
+  stroke-width: 14;
+  stroke-linecap: round;
+  transform: translate(5px, 5px);
   /* stroke-dasharray:110;
   stroke-dashoffset:92; */
 }
 
-main .insight .sales svg circle{
+main .insight .sales svg circle {
   stroke-dashoffset: -30;
   stroke-dasharray: 200;
 }
 
-main .insight .expanses svg circle{
+main .insight .expanses svg circle {
   stroke-dashoffset: 20;
   stroke-dasharray: 80;
 }
 
-main .insight .income svg circle{
+main .insight .income svg circle {
   stroke-dashoffset: 35;
   stroke-dasharray: 110;
 }
 
-main .insight .progress .number{
+main .insight .progress .number {
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   display: flex;
@@ -337,22 +337,21 @@ main .insight .progress .number{
   align-items: center;
 }
 
-main .insight small{
+main .insight small {
   margin-top: 1.6rem;
   display: block;
 }
 
 /**===========================RECENT ORDERS===========================*/
-main .recent-order{
+main .recent-order {
   margin-top: 2rem;
-
 }
 
-main .recent-order h2{
-  margin-bottom: .8rem;
+main .recent-order h2 {
+  margin-bottom: 0.8rem;
 }
 
-main .recent-order table{
+main .recent-order table {
   background-color: var(--color-white);
   width: 100%;
   border-radius: var(--card-border-radius);
@@ -362,21 +361,21 @@ main .recent-order table{
   transition: all 300ms ease;
 }
 
-main .recent-order table:hover{
+main .recent-order table:hover {
   box-shadow: none;
 }
 
-main table tbody td{
+main table tbody td {
   height: 2.8rem;
   border-bottom: 1px solid var(--color-light);
   color: var(--color-dark-variant);
 }
 
-main table tbody tr:last-child td{
+main table tbody tr:last-child td {
   border: none;
 }
 
-main .recent-order a{
+main .recent-order a {
   text-align: center;
   display: block;
   margin: 1rem auto;
@@ -385,22 +384,22 @@ main .recent-order a{
 
 /**==================================RIGHT==================================*/
 
-.right{
+.right {
   margin-top: 1.4rem;
 }
 
-.right .top{
+.right .top {
   display: flex;
   justify-content: end;
   gap: 2rem;
   /* background-color: gray; */
 }
 
-.right .top button{
+.right .top button {
   display: none;
 }
 
-.right .theme-toggler{
+.right .theme-toggler {
   background-color: var(--color-light);
   display: flex;
   justify-content: space-between;
@@ -411,7 +410,7 @@ main .recent-order a{
   border-radius: var(--border-radius-1);
 }
 
-.right .theme-toggler span{
+.right .theme-toggler span {
   font-size: 1.2rem;
   width: 50%;
   height: 100%;
@@ -420,28 +419,28 @@ main .recent-order a{
   justify-content: center;
 }
 
-.right .theme-toggler span.active{
+.right .theme-toggler span.active {
   background-color: var(--color-primary);
   color: white;
   border-radius: var(--border-radius-1);
 }
 
-.right .top .profile{
+.right .top .profile {
   display: flex;
   gap: 2rem;
   text-align: right;
 }
 
 /**============================RECENT UPDATES============================*/
-.right .recent-updates{
+.right .recent-updates {
   margin-top: 1rem;
 }
 
-.right .recent-updates h2{
-  margin-bottom: .8rem;
+.right .recent-updates h2 {
+  margin-bottom: 0.8rem;
 }
 
-.right .recent-updates .update{
+.right .recent-updates .update {
   background-color: var(--color-white);
   padding: var(--card-padding);
   border-radius: var(--card-border-radius);
@@ -449,11 +448,11 @@ main .recent-order a{
   transition: all 300ms ease;
 }
 
-.right .recent-updates .update:hover{
+.right .recent-updates .update:hover {
   box-shadow: none;
 }
 
-.right .recent-updates .updates .update{
+.right .recent-updates .updates .update {
   display: grid;
   grid-template-columns: 2.6rem auto;
   gap: 1rem;
@@ -461,15 +460,15 @@ main .recent-order a{
 }
 
 /**==================================SALES ANALYTICS==================================*/
-.right .sales-analytics{
+.right .sales-analytics {
   margin-top: 2rem;
 }
 
-.right .sales-analytics h2{
+.right .sales-analytics h2 {
   margin-bottom: 0.8rem;
 }
 
-.right .sales-analytics .item{
+.right .sales-analytics .item {
   background-color: var(--color-white);
   display: flex;
   align-items: center;
@@ -481,11 +480,11 @@ main .recent-order a{
   transition: all 300ms ease;
 }
 
-.right .sales-analytics .item:hover{
+.right .sales-analytics .item:hover {
   box-shadow: none;
 }
 
-.right .sales-analytics .item .right{
+.right .sales-analytics .item .right {
   display: flex;
   justify-content: space-between;
   align-items: start;
@@ -493,23 +492,23 @@ main .recent-order a{
   width: 100%;
 }
 
-.right .sales-analytics .item .icon{
+.right .sales-analytics .item .icon {
   padding: 0.6rem;
-  color:var(--color-white);
+  color: var(--color-white);
   border-radius: 50%;
   background-color: var(--color-primary);
   display: flex;
 }
 
-.right .sales-analytics .item.offline .icon{
+.right .sales-analytics .item.offline .icon {
   background-color: var(--color-danger);
 }
 
-.right .sales-analytics .item.customers .icon{
+.right .sales-analytics .item.customers .icon {
   background-color: var(--color-success);
 }
 
-.right .sales-analytics .add-products{
+.right .sales-analytics .add-products {
   background-color: transparent;
   border: 1px dashed var(--color-primary);
   color: var(--color-primary);
@@ -517,12 +516,64 @@ main .recent-order a{
   justify-content: center;
 }
 
-.right .sales-analytics .add-products div{
+.right .sales-analytics .add-products div {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
-.right .sales-analytics .add-products h3{
+.right .sales-analytics .add-products h3 {
   font-weight: 600;
+}
+
+/**=====================================MEDIA QUERIES=====================================*/
+
+@media screen and (max-width:1200px) {
+  .container{
+    width: 94%;
+    grid-template-columns: 7rem auto 23rem;
+  }
+
+  aside .logo h2{
+    display: none;
+  }
+
+  aside .sidebar h3{
+    display: none;
+  }
+
+  aside .sidebar a{
+    width: 5.6rem;
+  }
+
+  aside .sidebar a:last-child{
+    position: relative;
+    margin-top: 1.8rem;
+  }
+
+  main .insight{
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
+  main .recent-order{
+    width: 94%;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    margin: 2rem 0 0 8.8rem;
+  }
+
+  main .recent-order table{
+    width: 83vw;
+  }
+
+  main table thead tr th:last-child,
+  main table thead tr th:first-child{
+    display: none;
+  }
+  main table tbody tr td:last-child,
+  main table tbody tr td:first-child{
+    display: none;
+  }
 }
