--- a/style.css
+++ b/style.css
@@ -26,6 +26,16 @@
   --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
+/**=============================DARK THEME=============================*/
+.dark-theme-variables{
+  --color-background:#181a1e;
+  --color-white:#202528;
+  --color-dark:#edeffd;
+  --color-dark-variant:#a3bdcc;
+  --color-light:rgba(0,0,0,0.4);
+  --box-shadow:0 2rem 3rem var(--color-light);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -587,7 +597,7 @@ main .recent-order a {
 
   aside {
     position: fixed;
-    left: 0;
+    left: -100%;
     background-color: var(--color-white);
     width: 18rem;
     z-index: 3;
@@ -595,6 +605,13 @@ main .recent-order a {
     height: 100vh;
     padding-right: var(--card-padding);
     display: none;
+    animation: showMenu 400ms ease forwards;
+  }
+
+  @keyframes showMenu {
+    to{
+      left:0;
+    }
   }
 
   aside .logo {
